--- a/pricing.css
+++ b/pricing.css
@@ -78,7 +78,7 @@ button .glyphicon-menu-right, input[type="button"] .glyphicon-menu-right, input[
     margin-bottom: 38px;
 }
 .separator {
-    background-color: #009cdb;
+    background-color: #d2282e;
     height: 3px;
     width: 100px;
     margin: 0 auto;
