--- a/pricing.css
+++ b/pricing.css
@@ -15,7 +15,7 @@
     line-height: 50px;
 }
 h2, .header-two {
-    font-family: "Trebuchet MS", Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 19px;
     line-height: 1.3;
     text-transform: uppercase;
@@ -51,7 +51,7 @@ h2, .header-two {
 button.orange-button, input[type="button"].orange-button, input[type="reset"].orange-button, input[type="submit"].orange-button, a.button.orange-button {
     background-color: #d2282e;
     color: #ffffff;
-    padding: 18px 20px;
+    padding: 12px 20px;
     box-shadow: 0 3px 0 0 rgba(24, 24, 25, 0.1);
     -webkit-transition: all .75s;
     transition: all .75s;
@@ -114,8 +114,11 @@ li {
 .seo-header, .product-header, .intro-type .container h1.white, .company-heading h1 {
     font-weight: 100 !important;
     text-transform: capitalize;
-    font-size: 65px;
+    font-size: 55px;
     margin-bottom: 20px;
+}
+.parallax {
+    background-attachment: inherit !important;
 }
 .parallax {
     background-attachment: inherit !important;
